fixed home screen bug that cause it to overlap with nav during zooms

--- a/css/layout.css
+++ b/css/layout.css
@@ -213,17 +213,21 @@ html {
   height: 7rem;
 }
 
-.home {
+div.home {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  top: 0;
+
+  /* position: absolute; */
+
+  /* top: 0;
   bottom: 0;
   left: 0;
-  right: 0;
-  margin: auto;
+  right: 0; */
+  padding-top: 10rem;
+
+  /* margin: auto; */
   z-index: -1;
 }
 
